--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,11 +6,11 @@
 #    By: kyoda <kyoda@student.42tokyo.jp>           +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/08/31 17:20:52 by kyoda             #+#    #+#              #
-#    Updated: 2022/08/31 17:23:58 by kyoda            ###   ########.fr        #
+#    Updated: 2022/09/01 12:41:51 by kyoda            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME		= libftprintf.a
+NAME		= printf.a
 SRC			= 
 OBJS		= $(SRC:.c=.o)
 CC 			= gcc
